--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -12,6 +12,7 @@ body{
 .all_content{
     width:80%;
     margin:auto;
+    min-height: 100%;
 
 }
 /* section styling*/
